--- a/SynologyPictureSync/MediaSync.csproj
+++ b/SynologyPictureSync/MediaSync.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\DateTimeExtensions.cs" />
     <Compile Include="FileSystemWatcher.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -56,7 +57,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sync.cs" />
+    <Compile Include="FileSyncer.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="SyncConfig.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
