--- a/SynologyPictureSync/MediaSync.csproj
+++ b/SynologyPictureSync/MediaSync.csproj
@@ -48,7 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\DateTimeExtensions.cs" />
-    <Compile Include="FileSystemWatcher.cs" />
     <Compile Include="FormTray.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +62,7 @@
     </Compile>
     <Compile Include="Machine.cs" />
     <Compile Include="Model\ConfigValidCheckResult.cs" />
+    <Compile Include="Model\CopyTask.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileSyncer.cs" />
